kubernetes/hands-on/minikube-local/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    purpose: minikube-hands-on
