kubernetes/hands-on/minikube-local/manifests/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lb
  namespace: hello
spec:
  type: LoadBalancer
  selector:
    app: hello-web
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
