kubernetes/hands-on/minikube-local/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
